crates/runtime/tests/search/snapshots/integration_models__search__duckdb-s3_vectors-dataset-multi_column_megascience_keywords_response.snap
---
source: crates/runtime/tests/search/mod.rs
expression: normalize_search_response(resp)
---
{
  "duration_ms": "duration_ms_val",
  "results": [
    {
      "_score": "0.03",
      "dataset": "spice.public.qs",
      "matches": {
        "answer": [
          "The base number is \\(\\boxed{2}\\), because \\(2^5 = 2 \\times 2 \\times 2 \\times 2 \\times 2 = 32\\)."
        ],
        "question": [
          "Which base number, when raised to the fifth power, equals thirty-two?"
        ]
      },
      "primary_key": {
        "id": 1277
      }
    },
    {
      "_score": "0.03",
      "dataset": "spice.public.qs",
      "matches": {
        "answer": [
          "The smallest number in the book is typically $\\boxed{1}$, as counting books usually start from this number."
        ],
        "question": [
          "What is the smallest number in the book \"Things You Can Count in This Counting Book\"?"
        ]
      },
      "primary_key": {
        "id": 1152
      }
    },
    {
      "_score": "0.01",
      "dataset": "spice.public.qs",
      "matches": {
        "answer": [
          "To evaluate $12 \\times 12$, we multiply the two numbers:\n\\[ 12 \\times 12 = 144 \\]\nThus, the final answer is $\\boxed{144}$."
        ]
      },
      "primary_key": {
        "id": 42
      }
    },
    {
      "_score": "0.01",
      "dataset": "spice.public.qs",
      "matches": {
        "question": [
          "If \\(a + b + c + \\ldots + z = 100\\), where \\(a, b, c, \\ldots, z\\) are 50 equal numbers, what is the value of each number?"
        ]
      },
      "primary_key": {
        "id": 507
      }
    }
  ]
}
