crates/runtime/tests/search/snapshots/integration_models__search__duckdb-s3_vectors-dataset-multi_column_megascience_vector_search_sql_basic.snap
---
source: crates/runtime/tests/search/mod.rs
description: "SELECT id, answer, trunc(_score, 3) FROM vector_search(qs, 'second', answer) order by _score desc, id LIMIT 4"
---
[
  {
    "id": 1277,
    "answer": "The base number is \\(\\boxed{2}\\), because \\(2^5 = 2 \\times 2 \\times 2 \\times 2 \\times 2 = 32\\).",
    "trunc(vector_search(qs, Utf8(\"second\"), answer)._score,Int64(3))": 0.539
  },
  {
    "id": 948,
    "answer": "The fifth root of 32 is \\(\\boxed{2}\\), because \\(2 \\times 2 \\times 2 \\times 2 \\times 2 = 32\\).",
    "trunc(vector_search(qs, Utf8(\"second\"), answer)._score,Int64(3))": 0.528
  },
  {
    "id": 191,
    "answer": "\\[\n20 - 2(-3)^2 = 20 - 2(9) = 20 - 18 = \\boxed{2}\n\\]",
    "trunc(vector_search(qs, Utf8(\"second\"), answer)._score,Int64(3))": 0.521
  },
  {
    "id": 41,
    "answer": "\\[\n_{14}P_{4} = 14 \\times 13 \\times 12 \\times 11 = \\boxed{24,\\!024}\n\\]",
    "trunc(vector_search(qs, Utf8(\"second\"), answer)._score,Int64(3))": 0.501
  }
]
